tests/errors/scalar_variable_requires_cast.dang
import Test

# Literals auto-coerce to compatible scalars, but a non-literal String value
# (a variable) still requires an explicit :: cast at the call boundary.
pub myUrl = "https://example.com"
pub bad = fetchURL(url: myUrl)
